--- a/Caddyfile
+++ b/Caddyfile
@@ -1,4 +1,4 @@
-www.seawall.horse/m seawall.horse/m {
+seawall.horse www.seawall.horse www.seawall.horse/m seawall.horse/m {
    root ./masterapp
 }
 www.seawall.horse/p seawall.horse/p {
