--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/jrallsn/imajeep#readme",
   "dependencies": {
+    "sqlite3": "^3.1.8",
     "ws": "^3.0.0"
   }
 }
